--- a/programs.html
+++ b/programs.html
@@ -36,13 +36,13 @@
     <section class="card shadow p-4 mb-4">
         <div class="row align-items-center">
             <div class="col-md-4">
-                <img src="images/trainer.jpg" alt="Тренер бокса" class="img-fluid rounded">
+                <img src="trainer.jpg" alt="Тренер по боксу" class="img-fluid rounded">
             </div>
             <div class="col-md-8">
                 <h2>Секция бокса</h2>
                 <p>
                     Наш клуб предлагает профессиональную секцию бокса для всех возрастов. Тренировки ведёт опытный наставник,
-                    мастер спорта Иван Петров, подготовивший множество чемпионов.
+                    кандидат в мастера спорта по босу СССР Кравченко Андрей Александрович, подготовивший множество чемпионов.
                 </p>
                 <div class="d-flex">
                     <a href="gallery.html" class="btn btn-primary me-2">Галерея</a>
