--- a/programs.html
+++ b/programs.html
@@ -42,7 +42,7 @@
                 <h2>Секция бокса</h2>
                 <p>
                     Наш клуб предлагает профессиональную секцию бокса для всех возрастов. Тренировки ведёт опытный наставник,
-                    кандидат в мастера спорта по босу СССР Кравченко Андрей Александрович, подготовивший множество чемпионов.
+                    кандидат в мастера спорта по боксу СССР Кравченко Андрей Александрович, подготовивший множество чемпионов.
                 </p>
                 <div class="d-flex">
                     <a href="gallery.html" class="btn btn-primary me-2">Галерея</a>
