--- a/programs.html
+++ b/programs.html
@@ -140,6 +140,21 @@
 </script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+    function toggleContactBox() {
+        document.querySelector('.floating-contact-box').classList.toggle('minimized');
+    }
+
+    // Автосворачивание при прокрутке
+    window.addEventListener('scroll', function() {
+        let contactBox = document.querySelector('.floating-contact-box');
+        if (window.scrollY > 100) {  // Сворачивается, если проскроллено больше 100px
+            contactBox.classList.add('minimized');
+        } else {
+            contactBox.classList.remove('minimized');
+        }
+    });
+</script>
 
 </body>
 </html>
