--- a/programs.html
+++ b/programs.html
@@ -58,9 +58,23 @@
             <div class="container flex-lg-row flex-nowrap align-items-center">
                 <!-- Логотип -->
                 <div class="navbar-brand w-100">
-                    <a href="index.html">
-                        <img class="logo-dark" style="max-width: 100px" src="цветспарашютом.jpg" alt="Логотип">
-                    </a>
+                    <a href="#">
+              <img class="logo-dark"
+                   style="max-width: 100px"
+                  data-param-id="4"
+                  data-param-type="image"
+
+                                      src="цветспарашютом.jpg"
+                                    alt="" />
+
+              <img class="logo-light"
+                   style="max-width: 200px"
+                   data-param-id="4"
+                   data-param-type="image"
+
+                                          src="цветспарашютом.jpg"
+                                      alt=""/>
+            </a>
                 </div>
 
                 <div class="navbar-collapse offcanvas offcanvas-nav offcanvas-start">
