--- a/index.html
+++ b/index.html
@@ -544,7 +544,9 @@
        📍 Центральная ул., 3, село Совхоз Боровский
     </a>
 </p>
-                                        <a href="mailto:anospkpride@ya.ru" data-param-id=6 data-param-type="text">📧 anospkpride@ya.ru</a>                    <br/><a href="tel:+79092502221" data-param-id="5" data-param-type="text">📞 +79092502221</a>                </div>
+        <a href="mailto:info@спкпрайд.рф" data-param-id=6 data-param-type="text">📧 info@спкпрайд.рф</a>
+	<br/><a href="tel:+79092502221" data-param-id="5" data-param-type="text">📞 +79092502221</a>
+		</div>
                 <!-- /.widget -->
             </div>
             <!-- /column -->
@@ -590,7 +592,7 @@
     </div>
     <div class="contact-content">
         <p><a href="tel:+79092502221">📞 Телефон</a></p>
-        <p><a href="mailto:anospkpride@ya.ru">📧 Почта</a></p>
+        <p><a href="info@спкпрайд.рф">📧 Почта</a></p>
         <p><a href="https://t.me/ano_spk_prayd">Telegram</a></p>
         <p><a href="https://vk.com/club229427609">VK</a></p>
     </div>
