--- a/programs.html
+++ b/programs.html
@@ -138,9 +138,10 @@
     <div class="floating-contact-box">
         <div class="contact-header" onclick="toggleContactBox()">Контакты</div>
         <div class="contact-content">
-            <p><strong>Телефон:</strong> +7 (900) 123-45-67</p>
-            <p><strong>Email:</strong> info@prideclub.ru</p>
-            <p><strong>Адрес:</strong> г. Москва, ул. Примерная, 10</p>
+        <p><a href="tel:+79092502221">📞 Телефон</a></p>
+        <p><a href="info@спкпрайд.рф">📧 Почта</a></p>
+        <p><a href="https://t.me/ano_spk_prayd">Telegram</a></p>
+        <p><a href="https://vk.com/club229427609">VK</a></p>
         </div>
     </div>
 
