--- a/programs.html
+++ b/programs.html
@@ -170,6 +170,16 @@
         }
     });
 </script>
+<script>
+    window.addEventListener('scroll', function() {
+        let header = document.querySelector('.wrapper.bg-sky');
+        if (window.scrollY > 50) {
+            header.classList.add('scrolled');
+        } else {
+            header.classList.remove('scrolled');
+        }
+    });
+</script>
 
 </body>
 </html>
