--- a/programs.html
+++ b/programs.html
@@ -48,6 +48,18 @@
         .floating-contact-box.minimized .contact-content {
             display: none;
         }
+        .wrapper.bg-sky {
+    transition: background-color 0.3s ease-in-out;
+}
+
+.wrapper.bg-sky.scrolled {
+    background-color: rgba(255, 255, 255, 0.8) !important; /* Полупрозрачный белый */
+}
+
+.wrapper.bg-sky.scrolled .nav-link {
+    color: black !important; /* Чёрные ссылки в меню */
+}
+
     </style>
 </head>
 <body>
