--- a/programs.html
+++ b/programs.html
@@ -67,6 +67,38 @@
 <div class="content-wrapper">
     <header class="wrapper bg-sky">
         <nav class="navbar navbar-expand-lg center-nav transparent navbar-light">
+    <div class="container flex-lg-row flex-nowrap align-items-center">
+        <!-- Логотип -->
+        <div class="navbar-brand w-100">
+            <a href="index.html">
+                <img class="logo-dark" style="max-width: 100px" src="цветспарашютом.jpg" alt="Логотип">
+            </a>
+        </div>
+
+        <!-- Кнопка гамбургер-меню -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Меню -->
+        <div class="collapse navbar-collapse offcanvas offcanvas-nav offcanvas-start" id="navbarNav">
+            <div class="offcanvas-header d-lg-none">
+                <a href="#"><img style="max-width: 120px" src="IMG-20250227-WA0108.jpg" alt=""/></a>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body ms-lg-auto d-flex flex-column h-100">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html#about">О нас</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html#news">Новости</a></li>
+                    <li class="nav-item"><a class="nav-link" href="programs.html">Программы</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html#contact">Контакты</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</nav>
+
             <div class="container flex-lg-row flex-nowrap align-items-center">
                 <!-- Логотип -->
                 <div class="navbar-brand w-100">
@@ -125,7 +157,7 @@
                     </p>
                     <div class="d-flex">
                         <a href="gallery.html" class="btn btn-primary me-2">Галерея</a>
-                        <a href="contact.html" class="btn btn-success">Записаться</a>
+                        <a href="index.html#contact" class="btn btn-success">Записаться</a>
                     </div>
                 </div>
             </div>
