--- a/programs.html
+++ b/programs.html
@@ -82,13 +82,26 @@
                 </div>
                 <div class="col-md-8">
                     <h2>Секция бокса</h2>
-                    <p>Наш клуб предлагает профессиональную секцию бокса для всех возрастов...</p>
+                    <p>Наш клуб предлагает профессиональную секцию бокса для всех возрастов. Тренировки ведёт опытный наставник,
+                    кандидат в мастера спорта по боксу СССР Кравченко Андрей Александрович, подготовивший множество чемпионов.</p>
                     <div class="d-flex">
                         <a href="gallery.html" class="btn btn-primary me-2">Галерея</a>
                         <a href="index.html#contact" class="btn btn-success">Записаться</a>
                     </div>
                 </div>
             </div>
+        </section>
+        <section class="card shadow p-4 mb-4">
+            <h2>Военно-патриотическая подготовка</h2>
+            <p>
+                Программа включает тренировки по военной тактике, физподготовку и изучение истории российских вооружённых сил.
+            </p>
+        </section>
+        <section class="card shadow p-4 mb-4">
+            <h2>Тактические игры</h2>
+            <p>
+                Участники проходят курс тактических игр, стрельбы из пневматики и ориентирования на местности.
+            </p>
         </section>
     </main>
 
