--- a/programs.html
+++ b/programs.html
@@ -52,25 +52,27 @@
 
 <div class="content-wrapper">
     <header class="wrapper bg-sky">
-        <nav class="navbar navbar-expand-lg navbar-light">
-            <div class="container">
-                <a href="index.html" class="navbar-brand">
-                    <img style="max-width: 100px" src="цветспарашютом.jpg" alt="Логотип">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li>
-                        <li class="nav-item"><a class="nav-link" href="index.html#about">О нас</a></li>
-                        <li class="nav-item"><a class="nav-link" href="index.html#news">Новости</a></li>
-                        <li class="nav-item"><a class="nav-link" href="programs.html">Программы</a></li>
-                        <li class="nav-item"><a class="nav-link" href="index.html#contact">Контакты</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+       <nav class="navbar navbar-expand-lg navbar-light">
+    <div class="container">
+        <a href="index.html" class="navbar-brand">
+            <img style="max-width: 100px" src="цветспарашютом.jpg" alt="Логотип">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Переключить навигацию">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li>
+                <li class="nav-item"><a class="nav-link" href="index.html#about">О нас</a></li>
+                <li class="nav-item"><a class="nav-link" href="index.html#news">Новости</a></li>
+                <li class="nav-item"><a class="nav-link" href="programs.html">Программы</a></li>
+                <li class="nav-item"><a class="nav-link" href="index.html#contact">Контакты</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
     </header>
 
     <main class="container mt-5">
@@ -117,15 +119,20 @@
 </div>
 
 <script>
-    window.addEventListener('scroll', function() {
-        let header = document.querySelector('.wrapper.bg-sky');
-        if (window.scrollY > 50) {
-            header.classList.add('scrolled');
+    function toggleContactBox() {
+        document.querySelector('.floating-contact-box').classList.toggle('minimized');
+    }
+
+    window.addEventListener('scroll', function () {
+        let contactBox = document.querySelector('.floating-contact-box');
+        if (window.scrollY > 100) {
+            contactBox.classList.add('minimized');
         } else {
-            header.classList.remove('scrolled');
+            contactBox.classList.remove('minimized');
         }
     });
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
