--- a/programs.html
+++ b/programs.html
@@ -150,7 +150,7 @@
     <section class="card shadow p-4 mb-4">
         <div class="row align-items-center">
             <div class="col-md-4">
-                <img src="images/trainer.jpg" alt="Тренер бокса" class="img-fluid rounded">
+                <img src="coach.jpg" alt="Тренер бокса" class="img-fluid rounded">
             </div>
             <div class="col-md-8">
                 <h2>Секция бокса</h2>
