--- a/programs.html
+++ b/programs.html
@@ -150,13 +150,13 @@
     <section class="card shadow p-4 mb-4">
         <div class="row align-items-center">
             <div class="col-md-4">
-                <img src="coach.jpg" alt="Тренер бокса" class="img-fluid rounded">
+                <img src="coach.jpg" alt="Тренер по боксу" class="img-fluid rounded">
             </div>
             <div class="col-md-8">
                 <h2>Секция бокса</h2>
                 <p>
                     Наш клуб предлагает профессиональную секцию бокса для всех возрастов. Тренировки ведёт опытный наставник,
-                    мастер спорта Иван Петров, подготовивший множество чемпионов.
+                    кандидат в мастера спорта СССР Кравченко Андрей Александрович, подготовивший множество чемпионов.
                 </p>
                 <div class="d-flex">
                     <a href="gallery.html" class="btn btn-primary me-2">Галерея</a>
@@ -180,7 +180,14 @@
         </p>
     </section>
 </main>
-
+<!-- /section -->
+      <section class="wrapper bg-dark">
+        <div class="container pt-14 pt-md-16 pb-9 pb-md-11">
+          <figure class="rounded mt-md-n21 mt-lg-n23 mb-14" data-cue="slideInDown" data-delay="900"><img src="IMG-20250227-WA0108.jpg" data-param-id="30" data-param-type="image"  alt="" /></figure>
+        </div>
+        <!-- /.container -->
+      </section>
+      <!-- /section -->
 <!-- Подключение Bootstrap (скрипты) -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
