--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       <!-- /section -->
       <section class="wrapper bg-dark">
         <div class="container pt-14 pt-md-16 pb-9 pb-md-11">
-          <figure class="rounded mt-md-n21 mt-lg-n23 mb-14" data-cue="slideInDown" data-delay="900"><img src="IMG-20250227-WA0108.jpg" data-param-id="30" data-param-type="image"  alt="" /></figure>
+          <figure class="rounded mt-md-n21 mt-lg-n23 mb-14" data-cue="slideInDown" data-delay="900"><img src="цветспарашютом.jpg" data-param-id="30" data-param-type="image"  alt="" /></figure>
         </div>
         <!-- /.container -->
       </section>
