--- a/programs.html
+++ b/programs.html
@@ -190,6 +190,165 @@
       <!-- /section -->
 <!-- Подключение Bootstrap (скрипты) -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<section id="contact" class="wrapper bg-light">
+        <div class="container py-14 py-md-16">
+          <div class="row">
+            <div class="col-xl-10 mx-auto">
+              <div class="row gy-10 gx-lg-8 gx-xl-12">
+                <div class="col-lg-8">
+                  <form  id="contact-form" class="contact-form needs-validation" action="" novalidate>
+                    <div class="messages"></div>
+                    <div class="row gx-4">
+                      <!-- /column -->
+                      <div class="col-md-6">
+                        <div class="form-floating mb-4">
+                          <input id="form_email" type="email" name="email" class="form-control" placeholder="jane.doe@example.com" required>
+                          <label for="form_email">Email *</label>
+                          <div class="valid-feedback">
+                            Looks good!
+                          </div>
+                          <div class="invalid-feedback">
+                            Please provide a valid email address.
+                          </div>
+                        </div>
+                      </div>
+                      <!-- /column -->
+                      <!-- /column -->
+                      <!-- /column -->
+                      <div class="col-12">
+                        <div class="form-floating mb-4">
+                          <textarea id="form_message" name="message" class="form-control" placeholder="Your message" style="height: 150px" required></textarea>
+                          <label for="form_message">Message *</label>
+                          <div class="valid-feedback">
+                            Looks good!
+                          </div>
+                          <div class="invalid-feedback">
+                            Please enter your messsage.
+                          </div>
+                        </div>
+                      </div>
+                      <!-- /column -->
+                      <!-- /column -->
+                      <div class="col-12">
+                        <input type="submit" class="btn btn-primary rounded-pill btn-send mb-3" value="Отправить" data-param-id="110" data-param-type="text">
+                        <p class="text-muted"><strong>*</strong> These fields are required.</p>
+                      </div>
+                      <!-- /column -->
+                    </div>
+                    <!-- /.row -->
+                  </form>
+                  <!-- /form -->
+                </div>
+                <!--/column -->
+                <div class="col-lg-4">
+                                    <div class="d-flex flex-row">
+                    <div>
+                      <div class="icon text-primary fs-28 me-4 mt-n1"> <i class="uil uil-location-pin-alt"></i> </div>
+                    </div>
+                    <div>
+                      <h5 class="mb-1" data-param-id="132">Адрес</h5>
+                      <p>
+    <a href="https://yandex.ru/maps/?text=Центральная ул., 3, село Совхоз Боровский" 
+       target="_blank">
+       Центральная ул., 3, село Совхоз Боровский
+    </a>
+</p>
+                    </div>
+                  </div>
+                                                      <div class="d-flex flex-row">
+                    <div>
+                      <div class="icon text-primary fs-28 me-4 mt-n1"> <i class="uil uil-phone-volume"></i> </div>
+                    </div>
+                    <div>
+                      <h5 class="mb-1" data-param-id="133">Телефон</h5>
+                      <p><a href="tel:+79092502221" data-param-id="5" data-param-type="text">+79092502221</a></p>
+                    </div>
+                  </div>
+                                                      <div class="d-flex flex-row">
+                    <div>
+                      <div class="icon text-primary fs-28 me-4 mt-n1"> <i class="uil uil-envelope"></i> </div>
+                    </div>
+                    <div>
+                      <h5 class="mb-1" data-param-id="134">E-mail</h5>
+                      <p class="mb-0"><a href="mailto:anospkpride@ya.ru" data-param-id=6 data-param-type="text" class="link-body">anospkpride@ya.ru</a></p>
+                    </div>
+                  </div>
+                                  </div>
+                <!--/column -->
+              </div>
+              <!--/.row -->
+            </div>
+            <!-- /column -->
+          </div>
+          <!-- /.row -->
+        </div>
+        <!-- /.container -->
+      </section>
+      <!-- /section -->
+    
+
+ 
+
+		</div>
+
+		<footer class="bg-navy text-inverse">
+    <div class="container pt-15 pt-md-17 pb-13 pb-md-15">
+
+        <!--/div -->
+        <hr class="mt-11 mb-12"/>
+        <div class="row gy-6 gy-lg-0">
+            <div class="col-md-4 col-lg-3">
+                <div class="widget">
+                    <img class="mb-4"
+                         style="max-width: 120px"
+                         data-param-id="4"
+                         data-param-type="image"
+                                                    src="цветспарашютом.jpg"
+                                                 alt=""/>
+                                                 <p class="mb-4">Made by Waronin .</p>
+                    <nav class="nav social social-white">
+                                                                                                                        
+                                                                                            </nav>
+                    <!-- /.social -->
+                </div>
+                <!-- /.widget -->
+            </div>
+            <!-- /column -->
+            <div class="col-md-4 col-lg-3">
+                <div class="widget">
+                    <h4 class="widget-title text-white mb-3" data-param-id="111" data-param-type="text">Связаться с нами</h4>
+<p>
+    <a href="https://yandex.ru/maps/?text=Центральная ул., 3, село Совхоз Боровский" 
+       target="_blank">
+       📍 Центральная ул., 3, село Совхоз Боровский
+    </a>
+</p>
+        <a href="mailto:info@спкпрайд.рф" data-param-id=6 data-param-type="text">📧 info@спкпрайд.рф</a>
+	<br/><a href="tel:+79092502221" data-param-id="5" data-param-type="text">📞 +79092502221</a>
+		</div>
+                <!-- /.widget -->
+            </div>
+            <!-- /column -->
+            <div class="col-md-4 col-lg-3">
+                <div class="widget">
+                    <h4 class="widget-title text-white mb-3">&nbsp;</h4>
+                    <ul class="list-unstyled  mb-0">
+                        <li class="nav-item"><a class="nav-link" href="#" data-param-id="71" data-param-type="text">Главная</a></li>
+                        <li class="nav-item"><a class="nav-link" href="programs.html" data-param-id="72" data-param-type="text">Программы</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#about" data-param-id="73" data-param-type="text">О нас</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#news" data-param-id="74" data-param-type="text">Новости</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#contact" data-param-id="75" data-param-type="text">Контакты</a></li>
+                    </ul>
+                </div>
+                <!-- /.widget -->
+            </div>
+            <!-- /column -->
+                                                                                                                                                                                                                                                                                                                                                                        <!-- /column -->
+        </div>
+        <!--/.row -->
+    </div>
+    <!-- /.container -->
+</footer>					
 <div class="progress-wrap">
     <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
         <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98" />
