--- a/programs.html
+++ b/programs.html
@@ -100,7 +100,7 @@
           <div class="navbar-collapse offcanvas offcanvas-nav offcanvas-start">
             <div class="offcanvas-header d-lg-none">
               <a href="#"><img
-                        style="max-width: 120px"
+                        style="max-width: 20px"
                         data-param-id="4"
                         data-param-type="image"
                                                   src="эмба_бкса.jpg"
@@ -333,11 +333,12 @@
                 <div class="widget">
                     <h4 class="widget-title text-white mb-3">&nbsp;</h4>
                     <ul class="list-unstyled  mb-0">
-                        <li class="nav-item"><a class="nav-link" href="#" data-param-id="71" data-param-type="text">Главная</a></li>
-                        <li class="nav-item"><a class="nav-link" href="programs.html" data-param-id="72" data-param-type="text">Программы</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#about" data-param-id="73" data-param-type="text">О нас</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#news" data-param-id="74" data-param-type="text">Новости</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contact" data-param-id="75" data-param-type="text">Контакты</a></li>
+                        <li class="nav-item"><a class="nav-link" href="index.html" data-param-id="71" data-param-type="text">Главная</a></li>
+                <li class="nav-item"><a class="nav-link" href="index.html#about" data-param-id="73" data-param-type="text">О нас</a></li>
+                <li class="nav-item"><a class="nav-link" href="index.html#news" data-param-id="74" data-param-type="text">Новости</a></li>
+                <li class="nav-item"><a class="nav-link" href="#" data-param-id="72" data-param-type="text">Программы</a></li>
+                <li class="nav-item"><a class="nav-link" href="gallery.html" data-param-id="71" data-param-type="text">Галлерея</a></li>  
+                <li class="nav-item"><a class="nav-link" href="#contact" data-param-id="75" data-param-type="text">Контакты</a></li>
                     </ul>
                 </div>
                 <!-- /.widget -->
