--- a/programs.html
+++ b/programs.html
@@ -144,7 +144,7 @@
 			
    
    <main class="container mt-5">
-    <h1 class="text-center mb-4">Программы</h1>
+    <h1 class="text-center mb-4">ПРОГРАММЫ</h1>
 
     <!-- Раздел "Секция бокса" -->
     <section class="card shadow p-4 mb-4">
@@ -167,19 +167,25 @@
     </section>
     <!-- Добавим другие программы (пример) -->
     <section class="card shadow p-4 mb-4">
-        <h2>Военно-патриотическая подготовка</h2>
-        <p>
-            Программа включает тренировки по военной тактике, физподготовку и изучение истории российских вооружённых сил.
-        </p>
-    </section>
+            <h2>Ориентирование и тактическая подготовка</h2>
+            <p>Обучение навыкам ориентирования на местности, тактическому мышлению, организации взаимодействия в экстремальных условиях.</p>
+        </section>
+        <section class="card shadow p-4 mb-4">
+            <h2>Первая медицинская помощь</h2>
+            <p>Обучение навыкам оказания первой помощи, реанимации, транспортировки раненых в сложных условиях.</p>
+        </section>
+        <section class="card shadow p-4 mb-4">
+            <h2>Выживание в полевых условиях</h2>
+            <p>Практические занятия по выживанию в лесу, пустыне, горах. Разведение огня, добыча воды, строительство укрытия.</p>
+        </section>
+        <section class="card shadow p-4 mb-4">
+            <h2>Тактические игры</h2>
+            <p>Участие в сценарных играх, моделирование боевых действий, обучение командной работе и тактике.</p>
+        </section>
+    </main>
+</div>
 
-    <section class="card shadow p-4 mb-4">
-        <h2>Тактические игры</h2>
-        <p>
-            Участники проходят курс тактических игр, стрельбы из пневматики и ориентирования на местности.
-        </p>
-    </section>
-</main>
+		
 <!-- /section -->
       <section class="wrapper bg-dark">
         <div class="container pt-14 pt-md-16 pb-9 pb-md-11">
