--- a/index.html
+++ b/index.html
@@ -368,43 +368,31 @@
               <figure><img class="w-auto" src="gallery3.jpg" data-param-id="108" data-param-type="image"  alt="" /></figure>
             </div>
             <!--/column -->
-            <div class="col-lg-5">
-              <h3 class="fs-16 text-uppercase text-muted mb-3" data-param-id="53" data-param-type="text">ВСТУПАЯ В НАШ КЛУБ, ТЫ ПОЛУЧИШЬ:</h3>
-              <h3 class="display-4 mb-6" data-param-id="39" data-param-type="text">Наш спортивно-патриотический клуб принимает ветеранов и юных десантников. Для вступления нужно заполнить заявку с паспортными данными или свидетельством о рождении.</h3>
-              <div class="row gy-4">
-                <div class="col-md-6">
-                  <h4><span class="text-primary">1.</span> <span data-param-id="51-0-0" data-param-type="text">Физическая подготовка</span></h4>
-                  <p class="mb-0" data-param-id="51-0-1" data-param-type="text">Интенсивные тренировки по боксу, рукопашному бою и другим контактным видам спорта. Развитие силы, выносливости, независимости и скорости. Тренировки на свежем воздухе и в зале.</p>
-                </div>
-                <div class="col-md-6">
-                  <h4><span class="text-primary">2.</span> <span data-param-id="51-1-0" data-param-type="text">Военно-патриотическое воспитание</span></h4>
-                  <p class="mb-0" data-param-id="51-1-1" data-param-type="text">Изучение истории ВДВ и традиций российских десантников.
-Поддержание патриотического духа и независимости военной службы.
-Знакомство с реальными ветеранами ВДВ и их опытом.</p>
-                </div>
-                <div class="col-md-6">
-                  <h4><span class="text-primary">3.</span> <span data-param-id="51-2-0" data-param-type="text">Участие в соревнованиях и сборах</span></h4>
-                  <p class="mb-0" data-param-id="51-2-1" data-param-type="text">Спарринги, турниры и соревнования по контактным видам спорта.
-Внутриклубные и межклубные мероприятия.
-Выезды на военные полигоны, спортивные лагеря, слеты десантников.</p>
-                </div>
-                <div class="col-md-6">
-                  <h4><span class="text-primary">4.</span> <span data-param-id="51-3-0" data-param-type="text">Формирование сильного характера</span></h4>
-                  <p class="mb-0" data-param-id="51-3-1" data-param-type="text">Преодоление себя и своих слабостей.
-Развитие уверенности, отзывчивости и настойчивости.
-Готовность к защите себя, близких и Родины.</p>
-                </div>
-                <!--/column -->
-              </div>
-              <!--/.row -->
-            </div>
-            <!--/column -->
-          </div>
-          <!--/.row -->
+<div class="col-lg-5">
+    <h3 class="fs-16 text-uppercase text-muted mb-3" data-param-id="53" data-param-type="text">КТО МОЖЕТ ВСТУПИТЬ В КЛУБ?</h3>
+    <h3 class="display-4 mb-6" data-param-id="39" data-param-type="text">АНО СПК «ПРАЙД» открывает двери для всех, кто разделяет наши ценности и стремится к физическому и патриотическому развитию. Мы приглашаем подростков, молодежь и взрослых, желающих стать частью сплоченного сообщества.</h3>
+    <div class="row gy-4">
+        <div class="col-md-6">
+            <h4><span class="text-primary">1.</span> <span data-param-id="51-0-0" data-param-type="text">Развитие лидерских качеств</span></h4>
+            <p class="mb-0" data-param-id="51-0-1" data-param-type="text">Обучение навыкам командной работы, принятия решений в сложных ситуациях и ответственности за коллектив.</p>
         </div>
-        <!-- /.container -->
-      </section>
-      <!-- /section -->
+        <div class="col-md-6">
+            <h4><span class="text-primary">2.</span> <span data-param-id="51-1-0" data-param-type="text">Тактическая подготовка</span></h4>
+            <p class="mb-0" data-param-id="51-1-1" data-param-type="text">Основы военной тактики, маскировки, передвижения по пересеченной местности, взаимодействие в группе.</p>
+        </div>
+        <div class="col-md-6">
+            <h4><span class="text-primary">3.</span> <span data-param-id="51-2-0" data-param-type="text">Навыки выживания</span></h4>
+            <p class="mb-0" data-param-id="51-2-1" data-param-type="text">Обучение ориентированию на местности, добыче воды и пищи, оказанию первой медицинской помощи в экстремальных условиях.</p>
+        </div>
+        <div class="col-md-6">
+            <h4><span class="text-primary">4.</span> <span data-param-id="51-3-0" data-param-type="text">Дух товарищества</span></h4>
+            <p class="mb-0" data-param-id="51-3-1" data-param-type="text">Стань частью команды, научись поддерживать боевых товарищей, делиться опытом и вместе достигать целей.</p>
+        </div>
+    </div>
+    <!--/.row -->
+</div>
+<!--/column -->
+
 
 
 
@@ -491,7 +479,7 @@
                     </div>
                     <div>
                       <h5 class="mb-1" data-param-id="134">E-mail</h5>
-                      <p class="mb-0"><a href="mailto:anospkpride@ya.ru" data-param-id=6 data-param-type="text" class="link-body">anospkpride@ya.ru</a></p>
+                      <p class="mb-0"><a href="mailto:info@спкпрайд.рф" data-param-id=6 data-param-type="text" class="link-body">info@спкпрайд.рф</a></p>
                     </div>
                   </div>
                                   </div>
