--- a/programs.html
+++ b/programs.html
@@ -100,10 +100,10 @@
           <div class="navbar-collapse offcanvas offcanvas-nav offcanvas-start">
             <div class="offcanvas-header d-lg-none">
               <a href="#"><img
-                        style="max-width: 20px"
+                        style="max-width: 120px"
                         data-param-id="4"
                         data-param-type="image"
-                                                  src="эмба_бкса.jpg"
+                                                  src="IMG-20250227-WA0108.jpg"
                                                 alt="" /></a>
               <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
@@ -188,7 +188,7 @@
 		
 <!-- /section -->
       <section class="wrapper bg-dark">
-        <div class="container pt-14 pt-md-16 pb-9 pb-md-11">
+        <div class="container pt-8 pt-md-16 pb-6 pb-md-11">
           <figure class="rounded mt-md-n21 mt-lg-n23 mb-14" data-cue="slideInDown" data-delay="900"><img src="эмба_бкса.jpg" data-param-id="30" data-param-type="image"  alt="" /></figure>
         </div>
         <!-- /.container -->
@@ -276,7 +276,7 @@
                     </div>
                     <div>
                       <h5 class="mb-1" data-param-id="134">E-mail</h5>
-                      <p class="mb-0"><a href="mailto:anospkpride@ya.ru" data-param-id=6 data-param-type="text" class="link-body">anospkpride@ya.ru</a></p>
+                      <p class="mb-0"><a href="mailto:info@спкпрайд.рф" data-param-id=6 data-param-type="text" class="link-body">info@спкпрайд.рф</a></p>
                     </div>
                   </div>
                                   </div>
