--- a/programs.html
+++ b/programs.html
@@ -187,12 +187,12 @@
 
 		
 <!-- /section -->
-      <section class="wrapper bg-dark">
+    <!--  <section class="wrapper bg-dark">
         <div class="container pt-8 pt-md-16 pb-6 pb-md-11">
           <figure class="rounded mt-md-n21 mt-lg-n23 mb-14" data-cue="slideInDown" data-delay="900"><img src="эмба_бкса.jpg" data-param-id="30" data-param-type="image"  alt="" /></figure>
         </div>
         <!-- /.container -->
-      </section>
+    <!--  </section> -->
       <!-- /section -->
 <!-- Подключение Bootstrap (скрипты) -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
