--- a/programs.html
+++ b/programs.html
@@ -160,7 +160,7 @@
                 </p>
                 <div class="d-flex">
                     <a href="gallery.html" class="btn btn-primary me-2">Галерея</a>
-                    <a href="contact.html" class="btn btn-success">Записаться</a>
+                    <a href="#contact" class="btn btn-success">Записаться</a>
                 </div>
             </div>
         </div>
