--- a/programs.html
+++ b/programs.html
@@ -113,7 +113,7 @@
                 <li class="nav-item"><a class="nav-link" href="index.html#about" data-param-id="73" data-param-type="text">О нас</a></li>
                 <li class="nav-item"><a class="nav-link" href="index.html#news" data-param-id="74" data-param-type="text">Новости</a></li>
                 <li class="nav-item"><a class="nav-link" href="#" data-param-id="72" data-param-type="text">Программы</a></li>
-                <li class="nav-item"><a class="nav-link" href="gallery.html" data-param-id="71" data-param-type="text">Галлерея</a></li>  
+                <li class="nav-item"><a class="nav-link" href="index.html#gallery" data-param-id="71" data-param-type="text">Галлерея</a></li>  
                 <li class="nav-item"><a class="nav-link" href="index.html#contact" data-param-id="75" data-param-type="text">Контакты</a></li>
               </ul>
             
@@ -159,7 +159,7 @@
                     кандидат в мастера спорта СССР Кравченко Андрей Александрович, подготовивший множество чемпионов.
                 </p>
                 <div class="d-flex">
-                    <a href="gallery.html" class="btn btn-primary me-2">Галерея</a>
+                    <a href="index.html#gallery" class="btn btn-primary me-2">Галерея</a>
                     <a href="index.html#contact" class="btn btn-success">Записаться</a>
                 </div>
             </div>
@@ -343,8 +343,8 @@
                 <li class="nav-item"><a class="nav-link" href="index.html#about" data-param-id="73" data-param-type="text">О нас</a></li>
                 <li class="nav-item"><a class="nav-link" href="index.html#news" data-param-id="74" data-param-type="text">Новости</a></li>
                 <li class="nav-item"><a class="nav-link" href="#" data-param-id="72" data-param-type="text">Программы</a></li>
-                <li class="nav-item"><a class="nav-link" href="gallery.html" data-param-id="71" data-param-type="text">Галлерея</a></li>  
-                <li class="nav-item"><a class="nav-link" href="#contact" data-param-id="75" data-param-type="text">Контакты</a></li>
+                <li class="nav-item"><a class="nav-link" href="index.html#gallery" data-param-id="71" data-param-type="text">Галлерея</a></li>  
+                <li class="nav-item"><a class="nav-link" href="index.html#contact" data-param-id="75" data-param-type="text">Контакты</a></li>
                     </ul>
                 </div>
                 <!-- /.widget -->
